Nuclear attraction integral now works (with boysfunctions and hermiteintegrals)

--- a/report/main.tex
+++ b/report/main.tex
@@ -213,8 +213,9 @@ We also have some initial information:
 \end{equation}
 Hermite integrals of negative indices are taken to be zero.
 
-\subsection{Two-electron repulsion integrals (Coulomb)}
+From looking at the recurrence relations, one sees that there are several sources $(t', u', v', n')$ for finding a particlular integral $R_{tuv}^{n}$
 
+\subsection{Two-electron repulsion integrals (Coulomb)}arma::vec F;
 
 
 \begin{appendices}
